--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@ __pycache__/
 *results/
 logs
 stride_experiments/
-<<<<<<< HEAD
-=======
 dataset/
 logs/
 .venv/
->>>>>>> 38e5826fd1cc1bb2920fdeaa1cd952364a4f0242
+outputs/
